--- a/styles/assignment-styles.css
+++ b/styles/assignment-styles.css
@@ -60,3 +60,34 @@ header{
 .banner-button{
     margin-top: 37px;
 }
+   /* Main first section*/
+
+   .action-text{
+    font-size: 42px ;
+    font-weight: bold;
+}
+.action-paragraph{
+    font-weight: 400;
+    font-size: 24px;
+    color: rgba(37, 36, 50, 0.5);
+}
+.action-image{
+    width: 403px;
+    height: 328px;
+    border-radius: 40px;
+}
+.action-container{
+    display: flex;
+    width: 1140px;
+    height: 328px;
+    justify-content:space-between;
+    align-items: center;
+    margin: 116px auto;
+}
+.action-sentence{
+    width: 517px;
+    height: 203px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
