--- a/styles/assignment-styles.css
+++ b/styles/assignment-styles.css
@@ -1,5 +1,6 @@
 body{
     color: rgba(37, 36, 50, 1);
+    background-color: rgb(233, 239, 255);
 }
 .raleway{
   font-family: "Raleway", sans-serif;
@@ -130,4 +131,74 @@ header{
     height: 306px;
     background-color: rgba(78, 71, 255, 0.1);
     border-radius: 30px;
+}
+/* Main third section */
+.comment-part-1{
+    display: flex;
+    justify-content: space-evenly;
+    width: 116px;
+    height: 20px;
+}
+.comment-part-2{
+    width: 318.67px;
+    height: 81px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.comment-text{
+    font-size: 24px;
+    font-weight: 500;
+}
+.content-paragraph{
+    font-size: 16px;
+}
+.comment-name-date{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    font-size: 16px;
+}
+.comment-name-date span{
+    font-size: 16px;
+    color: rgba(37, 36, 50, 0.5);
+    width: 266.67px;
+    height: 22px;
+}
+.comment-image img{
+    border-radius: 100px;
+}
+.comment-part-3{
+    display: flex;
+}
+.comment-image{
+    width: 52px;
+    height: 46px;
+}
+.comment-header{
+    font-size: 42px;
+    text-align: center;
+}
+.comment-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 1140px;
+    height: 342px;
+    margin: 137px auto;
+}
+.comments{
+    display:flex;
+    justify-content: space-between;
+}
+.comment-1{
+    width: 342.67px;
+    height: 243px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    border:2px solid rgba(242, 237, 237, 1);
+    border-radius: 20px;
+    padding-left: 24px;
+    background-color: white;
 }
