--- a/styles/assignment-styles.css
+++ b/styles/assignment-styles.css
@@ -202,3 +202,28 @@ header{
     padding-left: 24px;
     background-color: white;
 }
+/* Main Fourth Section */
+.focus-text{
+    font-size: 50px;
+}
+.focus-paragraph{
+    font-size: 16px;
+    color:rgba(37, 36, 50, 0.5) ;
+}
+.focus-image img{
+    width: 840px;
+    height: 364.77px;
+    border-radius: 40px;
+}
+.focus-container{
+    width: 1140px;
+    height: 696.77px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    margin: 0 auto;
+    background-color: #ffffff;
+    border-radius: 15px;
+    margin-bottom: 92.23px;
+}
