--- a/styles/assignment-styles.css
+++ b/styles/assignment-styles.css
@@ -228,3 +228,61 @@ header{
     margin-bottom: 92.23px;
 }
 /* Main Fifth Section */
+.detail-container{
+    display: flex;
+    justify-content: space-between;
+    width: 1140px;
+    height: 632px;
+    align-items: center;
+    margin: 0 auto;
+}
+.detail-area{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    width: 497px;
+    height: 490px;
+
+
+}
+.detail-text{
+    font-size: 97px;
+    font-weight: bold;
+    width: 528px;
+}
+.detail-area label{
+    font-size: 18px;
+}
+.detail-area input{
+    font-size: 20px;
+    width: 465px;
+    padding: 20px 0;
+    padding-left: 32px;
+    border-radius: 15px;
+    border: none;
+}
+.detail-area textarea{
+    font-size: 20px;
+    width: 465px;
+    padding-top: 20px;
+    padding-left: 32px;
+    border-radius: 15px;
+    padding-bottom: 85px;
+    border: none;
+}
+.detail-button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    width: 497px;
+    height: 62px;
+    font-size: 16px;
+    background-color: #4E47FF;
+    color: #ffffff;
+    border-radius: 7px;
+    border: none;
+}
+.detail-area a{
+    text-decoration: none;
+}
